# explanatory-note-generator

./: .gitignore  Dockerfile  Dockerfile.nginx  README.md  app.py  docker-compose.yml  pyproject.toml  settings.py
auth_service/: .env.example  Dockerfile  pyproject.toml
auth_service/alembic/: env.py
auth_service/alembic/versions/: 63a0894c6b0d_create_users_table.py
auth_service/src/: main.py
auth_service/src/auth_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
auth_service/src/core/: config.py  database.py  redis.py  security.py
auth_service/src/dependencies/: auth.py  auth_guard.py  common.py  user.py
auth_service/src/models/: user.py
auth_service/src/repositories/: blacklist_repository.py  refresh_repository.py  user_repository.py
auth_service/src/schemas/: auth.py  user.py
auth_service/src/scripts/: create_admin.py
auth_service/src/services/: auth_service.py  user_service.py
backend/: .dockerignore  Dockerfile  README.md  app.py  pyproject.toml  settings.py
backend/api/v1/: router.py
backend/docx_templates/: template_explanatory_note.docx
backend/func/: __init__.py  address.py  ceo.py  charter_capital.py  deps.py  participants.py  request.py
backend/migrations/: env.py
backend/migrations/versions/: 50d2389473d0_create_user_requests_table.py
backend/services/: generate_explanatory_note.py  redis_service.py
backend/servises/: generate_explanatory_note.py
backend/src/: app.py  settings.py
backend/src/core/: config.py
backend/src/db/: __init__.py  session.py
backend/src/docx_templates/: template_explanatory_note.docx
backend/src/func/: address.py  ceo.py  deps.py  registration_date.py  request.py
backend/src/schemas/: __init__.py  (+1 more)
backend/tests/: moks.py  test_func.py  test_generate_explanatory_note.py
(+33 files in other folders)
