[project]
name = "explanatory-note"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "docxtpl>=0.20.2",
    "fastapi>=0.128.0",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]